# DE-DS-UIII

./: 02- MySQL Queries.ipynb  deds-01-Introduction-to-git.ipynb  deds-02-Writing-Industry-Standard-Python.ipynb  deds-03-Data Acquisition I – APIs & Automation.ipynb  deds-04-Relational Databases & SQL Fundamentals.ipynb  deds-05-Advanced Selection-Aggregation-Normalizations.ipynb  deds-06-Case-study - Answer.ipynb  deds-06-Normalizations-case-study.ipynb  deds-07-Review & Quiz.ipynb  deds-07-Review-Quiz-Legal-Ethics.ipynb
data/: 1nf-mini-store.sql  2nf-mini-store.sql  3nf-mini-store.sql  example-schema-sample-data.sql  global_gym_db_unnormalized.sql  indonesian-health-data-0.csv  indonesian-health-data-1.csv  indonesian-health-data-10.csv  indonesian-health-data-2.csv  indonesian-health-data-3.csv  indonesian-health-data-4.csv  indonesian-health-data-5.csv  indonesian-health-data-6.csv  indonesian-health-data-7.csv  indonesian-health-data-8.csv  indonesian-health-data-9.csv  intl_gym_db_unnormalized.sql  unnormalized-store-table-example.sql  youtube-search-data.json
data_engineering/: LICENSE  Makefile  README.md  pyproject.toml
data_engineering/data_eng_1/: __init__.py  dataset.py  features.py  plots.py
data_engineering/data_eng_1/modeling/: predict.py  train.py
data_engineering/docs/: mkdocs.yml
data_engineering/docs/docs/: index.md
src/: deds-02-typeHinting.py  messy_script.py  modularlib1.py  monolith-code1.py  trial.py
